<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Password Preferences -->
    <PreferenceCategory android:title="@string/passwordPreferencesTitle" >
        <Preference
            android:key="@+string/changePasswordPreferenceKey"
            android:summary="@string/changePasswordPreferenceSummary"
            android:title="@string/changePasswordPreferenceTitle" >
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="org.mcjug.aameetingmanager.authentication.ChangePasswordFragmentActivity"
                android:targetPackage="org.mcjug.meetingfinder" />
        </Preference>
        <Preference
            android:key="@+string/resetPasswordPreferenceKey"
            android:title="@string/resetPasswordPreferenceTitle" >
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="org.mcjug.aameetingmanager.authentication.ResetPasswordFragmentActivity"
                android:targetPackage="org.mcjug.meetingfinder" />
        </Preference>
    </PreferenceCategory>
    
    <!-- Time Preferences -->
    <PreferenceCategory android:title="@string/timePreferencesTitle" >
       <ListPreference
            android:key="@string/timeFormatKey"
            android:entries="@array/timeFormat"
            android:summary="@string/timeFormatSummary"
            android:entryValues="@array/timeFormatValues"
            android:defaultValue="12"
            android:title="@string/timeFormatTitle" />
    </PreferenceCategory>

</PreferenceScreen>