<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/emailAddressText"
	/>

    <EditText 
        android:id="@+id/emailAddressEditText"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:inputType="textEmailAddress"
    	android:minWidth="50sp"
	/>
 
    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/passwordText"
	/>

    <EditText 
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:inputType="textPassword"
    	android:minWidth="50sp"
	/>
    
    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/confirmPasswordText"
	/>

    <EditText 
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:inputType="textPassword"
    	android:minWidth="50sp"
	/>
 
	<Button
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:hint="@string/registerButton"
		android:textSize="20sp"
		android:id="@+id/registerButton"
	/>
	

	
</LinearLayout>