<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/meetingListSortBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/sortBy"
            android:layout_marginLeft="4dp"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/meetingListSortOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/meetingListSortBy"
            android:entries="@array/sortOrder" />

        <TextView
            android:id="@+id/meetingListNumItemsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"
            android:text="@string/meetingListNumItems"
            android:textSize="14sp" />
    </RelativeLayout>

    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#eeeeee"
        android:divider="#c7d6d6"
        android:dividerHeight="2dp"
        android:choiceMode="singleChoice"
        android:listSelector="@color/list_pressed"
	/>
    
  	<LinearLayout
	    android:id="@+id/sliderMenu"
	    android:layout_width="match_parent"
	    android:layout_height="60dp"
	    android:background="#FF555555"
	    android:content="@+id/content"
	    android:gravity="center_vertical|center_horizontal"
	    android:orientation="horizontal" >
     
        <ImageView
            android:id="@+id/mapImageView"
            android:contentDescription="@string/mapImageViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
            android:src="@android:drawable/ic_dialog_map" />
      
		<Button
	        android:id="@+id/meetingNotThereButton"
	        style="@style/buttonStyle"
	        android:layout_width="80dp"
	        android:layout_height="30dp"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
	        android:text="@string/meetingNotThereButton" 
	        android:textSize="12sp"/>
     
     
   </LinearLayout>
</LinearLayout>