<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/submitMeetingStartTimeButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:drawableRight="@drawable/clock" />
    
    <TextView
        android:id="@+id/submitMeetingStartTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_alignBaseline="@+id/submitMeetingStartTimeButton"
        android:text="@string/start_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/submitMeetingEndTimeButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/submitMeetingStartTimeButton"
        android:layout_below="@+id/submitMeetingStartTimeButton"
        android:layout_marginTop="5dp"
        android:drawableRight="@drawable/clock" />

    <TextView
        android:id="@+id/submitMeetingEndTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/submitMeetingEndTimeButton"
        android:layout_alignLeft="@+id/submitMeetingStartTimeTextView"
        android:text="@string/end_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/submitMeetingDayOfWeekTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/submitMeetingEndTimeTextView"
        android:layout_below="@+id/submitMeetingEndTimeButton"
        android:layout_marginTop="15dp"
        android:text="@string/day_of_week"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/submitMeetingDayOfWeekSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/submitMeetingEndTimeButton"
        android:layout_alignBaseline="@+id/submitMeetingDayOfWeekTextView"
        android:entries="@array/daysOfWeek" />
    
    <TextView
        android:id="@+id/submitMeetingAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/submitMeetingDayOfWeekTextView"
        android:layout_below="@+id/submitMeetingDayOfWeekTextView"
        android:layout_marginTop="25dp"
        android:text="@string/meeting_address"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/submitMeetingCurrentLocationButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/submitMeetingAddressTextView"
        android:layout_alignBottom="@+id/submitMeetingAddressTextView"
        android:layout_alignLeft="@+id/submitMeetingDayOfWeekSpinner"       
        android:text="@string/current_location_button" />

    <EditText
        android:id="@+id/submitMeetingAddressEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/submitMeetingAddressTextView"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/submitMeetingCurrentLocationButton"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:textAppearance="?android:attr/textAppearanceMedium" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/submitMeetingValidateAddressButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/submitMeetingAddressEditText"
        android:layout_below="@+id/submitMeetingAddressEditText"
        android:layout_marginTop="25dp"
        android:text="@string/validate_address_button" />

    <Button
        android:id="@+id/submitMeetingButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/submitMeetingValidateAddressButton"
        android:layout_alignBottom="@+id/submitMeetingValidateAddressButton"
        android:layout_marginLeft="35dp"
        android:layout_toRightOf="@+id/submitMeetingValidateAddressButton"
        android:text="@string/submit_button" />

</RelativeLayout>
